# matrix-chat

./: .gitignore  CLAUDE.md  LICENSE  MCPDESIGN.md  README.md  chatcli.py  get_token.py  interactive_quote_agent.py  matrix_mcp_server.py  pyproject.toml  quote_agent_example.py  setup_verification.py
docs/: MCPTESTING.md  README-MCP-SDK.md
