[project]
name = "matrix-chat"
version = "1.0.0"
description = "Simple Matrix chat client"
requires-python = ">=3.10"
dependencies = [
    "mautrix>=0.20.0",
    "aiohttp>=3,<4",
    "attrs>=18.1.0",
    "yarl>=1.5,<2",
    "mcp>=1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
matrix-chat = "chatcli:sync_main"
matrix-mcp-server = "matrix_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []